<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/preview"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:visibility="visible"
tools:context=".presentation.films.filmList.FilmListFragment">

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/roboto"
    android:text="@string/popularTextFilmList"
    android:textColor="@color/black"
    android:textSize="25sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/previewFilmRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="100dp"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    tools:listitem="@layout/film_item" />

<ProgressBar
    android:id="@+id/progressBarLoading"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="@+id/previewFilmRecyclerView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/previewFilmRecyclerView"
    app:layout_constraintTop_toTopOf="parent" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/popularButton"
    android:layout_width="158dp"
    android:layout_height="45dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/buttonshape"
    android:backgroundTint="#DEEFFF"
    android:text="@string/popularText"
    android:textAllCaps="false"
    android:textColor="#0094FF"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/favouriteButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/previewFilmRecyclerView" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/favouriteButton"
    android:layout_width="158dp"
    android:layout_height="45dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/buttonshape"
    android:text="@string/favouriteText"
    android:textAllCaps="false"
    android:textColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/popularButton"
    app:layout_constraintTop_toBottomOf="@+id/previewFilmRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout><androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/empty_view"
android:layout_gravity="center"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:orientation="vertical"
android:visibility="gone">

<ImageView
    android:id="@+id/imageView"
    android:layout_gravity="center"
    android:layout_height="81.98dp"
    android:layout_marginTop="315dp"
    android:layout_width="94.38dp"
    android:src="@drawable/error"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_width="wrap_content"
    android:text="@string/no_internet_message"
    android:textColor="#0094FF"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

<androidx.appcompat.widget.AppCompatButton
    android:background="@drawable/buttonshape"
    android:backgroundTint="#0094FF"
    android:id="@+id/refresh_button"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_width="wrap_content"
    android:text="@string/repeat_button"
    android:textAllCaps="false"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

